ui: customised foundation / flat-ui components

--- a/ogreserver/static/sass/app.scss
+++ b/ogreserver/static/sass/app.scss
@@ -18,11 +18,11 @@
 @import "buttons";
 @import "pagination";
 @import "topbar";
-@import "subnav";
+//@import "subnav";
 @import "forms";
-@import "sections";
-@import "sidenav";
-@import "breadcrumbs";
+//@import "sections";
+//@import "sidenav";
+//@import "breadcrumbs";
 @import "misc";
 
 
