ui: updated button styling

--- a/ogreserver/templates/login.html
+++ b/ogreserver/templates/login.html
@@ -12,7 +12,7 @@
 		<dd>{{ form.username() }}</dd>
 		<dt>{{ form.password.label }}</dt>
 		<dd>{{ form.password() }}</dd>
-		<dd><input type="submit" value="Login" /></dd>
+		<dd><input type="submit" value="Login" class="button radius primary-dark" /></dd>
 	</dl>
 </form>
 
