--- a/ogreserver/templates/profile_edit.html
+++ b/ogreserver/templates/profile_edit.html
@@ -14,7 +14,7 @@
 		<dd>{{ field() }}</dd>
 		{% endif %}
 		{% endfor %}
-		<dd><input type="submit" value="Save" /></dd>
+		<dd><input type="submit" value="Save" class="button radius primary-dark" /></dd>
 	</dl>
 </form>
 
