--- a/ogreserver/templates/layout.html
+++ b/ogreserver/templates/layout.html
@@ -43,17 +43,13 @@
 
 		<div class="row">
 			<div class="large-12 columns">
-				<h5>Search for a book</h5>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="large-12 columns">
 				<div id="messages">
 					{% for message in get_flashed_messages() %}
 					<div class="flash">{{ message }}</div>
 					{% endfor %}
 				</div>
+
+				<h5>Search for a book</h5>
 
 				<div class="search">
 					{% if session.user_id %}
@@ -78,10 +74,10 @@
 			</div>
 		</footer>
 
-		<div id="copyright">
+		<footer id="copyright">
 			<div class="row full-width">
 				<div class="large-4 columns">
-					<p>Site content &copy; 2013 Oii, inc.</p>
+					<p>Site content &copy; 2014 Oii, inc.</p>
 				</div>
 				<div class="large-8 columns">
 					<ul class="inline-list right">
@@ -90,7 +86,7 @@
 					</ul>
 				</div>
 			</div>
-		</div>
+		</footer>
 
 		<script src="{{ url_for('views.static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
 		<script src="{{ url_for('views.static', filename='bower_components/foundation/js/foundation.min.js') }}"></script>
