--- a/ogreserver/static/sass/_topbar.scss
+++ b/ogreserver/static/sass/_topbar.scss
@@ -7,7 +7,7 @@
 .top-bar-section {
   ul,
   ul li > a {
-    background:$wet-asphalt !important;
+    background:$grey333 !important;
     @include box-shadow(-4px 0px 8px -2px rgba(0, 0, 0, 0.1));
   }
   li a:not(.button):hover {
