ui: sassify the older css rules

--- a/ogreserver/static/sass/app.scss
+++ b/ogreserver/static/sass/app.scss
@@ -77,15 +77,33 @@ ul#ebook-listing, ul.users, ul.formats { list-style-type: none; margin-left: 0px
 .odd { background-color: #aaa; color: #0A65C8; }
 .even { background-color: #ddd; color: #2A85E8; }
 
-li.ebook { clear: both; padding: 6px; }
-li.ebook .secondsection { height: 1.3em; clear: both; }
-li.ebook a.title { font-size: 1.2em; }
+li.ebook {
+	clear: both;
+	padding: 6px;
 
-li.ebook span.info { float: right; line-height:20px; }
+	.secondsection {
+		height: 1.3em;
+		clear: both;
+	}
+	a.title {
+		font-size: 1.2em;
+	}
+	span.info {
+		float: right;
+		line-height:20px;
+	}
+}
 
-ul.users li, ul.formats li { float: left; margin-bottom: 0px; font-size: 0.9em; }
-ul.users { float: right; margin-bottom: 0px; }
-ul.formats { float: left; margin-bottom: 0px; }
+ul.users {
+	float: right;
+	margin-bottom: 0px;
+	li { float: left; margin-bottom: 0px; font-size: 0.9em; }
+}
+ul.formats {
+	float: left;
+	margin-bottom: 0px;
+	li { float: left; margin-bottom: 0px; font-size: 0.9em; }
+}
 
 .hidden { display: none; }
 
@@ -110,12 +128,12 @@ footer.row.full-width {
 	background: #3f3f3f;
 	color: #fff;
 	padding: 11px 0;
-}
-#copyright a {
-    color: #fff;
-    font-size: 14px;
-}
-#copyright p, #copyright ul {
-    margin-bottom: 0;
-}
 
+	a {
+		color: #fff;
+		font-size: 14px;
+	}
+	p, ul {
+		margin-bottom: 0;
+	}
+}
