--- a/ogreserver/templates/layout.html
+++ b/ogreserver/templates/layout.html
@@ -7,10 +7,10 @@
 
 		<title>O.G.R.E.</title>
 
-		<link rel="stylesheet" href="{{ url_for('views.static', filename='stylesheets/normalize.css') }}">
-		<link rel="stylesheet" href="{{ url_for('views.static', filename='stylesheets/app.css') }}">
+		<link rel="stylesheet" href="{{ url_for('core.static', filename='stylesheets/normalize.css') }}">
+		<link rel="stylesheet" href="{{ url_for('core.static', filename='stylesheets/app.css') }}">
 
-		<script src="{{ url_for('views.static', filename='bower_components/foundation/js/vendor/modernizr.js') }}"></script>
+		<script src="{{ url_for('core.static', filename='bower_components/foundation/js/vendor/modernizr.js') }}"></script>
 	</head>
 
 	<body>
@@ -25,16 +25,16 @@
 				<ul class="right">
 					<li class="divider"></li>
 					{% if not session.user_id %}
-					<li><a href="{{ url_for('views.login') }}">log in</a></li>
+					<li><a href="{{ url_for('auth.login') }}">log in</a></li>
 					{% else %}
-					<li><a href="{{ url_for('views.profile') }}">{{ g.user.username }}</a></li>
+					<li><a href="{{ url_for('user.profile') }}">{{ g.user.username }}</a></li>
 					<li class="divider"></li>
-					<li><a href="{{ url_for('views.logout') }}">log out</a></li>
+					<li><a href="{{ url_for('auth.logout') }}">log out</a></li>
 					{% endif %}
 					<li class="divider"></li>
 					<li>
 						<a href="http://en.wikipedia.org/wiki/Ogre" target="_blank" class="ogre">
-							<img src="{{ url_for('views.static', filename='images/ogrew.png') }}" width="38" height="38" />
+							<img src="{{ url_for('core.static', filename='images/ogrew.png') }}" width="38" height="38" />
 						</a>
 					</li>
 				</ul>
@@ -48,7 +48,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<form action="{{ url_for('views.list') }}" method="get">
+				<form action="{{ url_for('ebooks.listing') }}" method="get">
 					<div class="large-10 columns">
 						<input type="text" name="s" value="{{ s }}" />
 					</div>
@@ -97,12 +97,12 @@
 			</div>
 		</footer>
 
-		<script src="{{ url_for('views.static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
-		<script src="{{ url_for('views.static', filename='bower_components/foundation/js/foundation.min.js') }}"></script>
-		<script src="{{ url_for('views.static', filename='bower_components/foundation/js/foundation/foundation.topbar.js') }}"></script>
+		<script src="{{ url_for('core.static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
+		<script src="{{ url_for('core.static', filename='bower_components/foundation/js/foundation.min.js') }}"></script>
+		<script src="{{ url_for('core.static', filename='bower_components/foundation/js/foundation/foundation.topbar.js') }}"></script>
 		<script>
 		  $(document).foundation();
 		</script>
-		<script src="{{ url_for('views.static', filename='js/app.js') }}"></script>
+		<script src="{{ url_for('core.static', filename='js/app.js') }}"></script>
 	</body>
 </html>
