--- a/ogreserver/templates/login.html
+++ b/ogreserver/templates/login.html
@@ -7,10 +7,10 @@
 
 		<title>O.G.R.E.</title>
 
-		<link rel="stylesheet" href="{{ url_for('views.static', filename='stylesheets/normalize.css') }}">
-		<link rel="stylesheet" href="{{ url_for('views.static', filename='stylesheets/app.css') }}">
+		<link rel="stylesheet" href="{{ url_for('core.static', filename='stylesheets/normalize.css') }}">
+		<link rel="stylesheet" href="{{ url_for('core.static', filename='stylesheets/app.css') }}">
 
-		<script src="{{ url_for('views.static', filename='bower_components/foundation/js/vendor/modernizr.js') }}"></script>
+		<script src="{{ url_for('core.static', filename='bower_components/foundation/js/vendor/modernizr.js') }}"></script>
 	</head>
 
 	<body>
@@ -27,7 +27,7 @@
 
 				{% for error in form.errors %}<p class="error">{{ form.errors[error][0] }}</p>{% endfor %}
 
-				<form action="{{ url_for('views.login') }}" method="post">
+				<form action="{{ url_for('auth.login') }}" method="post">
 					{{ form.csrf_token }}
 					<dl>
 						<dt>{{ form.username.label }}</dt>
@@ -48,12 +48,12 @@
 			</div>
 		</footer>
 
-		<script src="{{ url_for('views.static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
-		<script src="{{ url_for('views.static', filename='bower_components/foundation/js/foundation.min.js') }}"></script>
-		<script src="{{ url_for('views.static', filename='bower_components/foundation/js/foundation/foundation.topbar.js') }}"></script>
+		<script src="{{ url_for('core.static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
+		<script src="{{ url_for('core.static', filename='bower_components/foundation/js/foundation.min.js') }}"></script>
+		<script src="{{ url_for('core.static', filename='bower_components/foundation/js/foundation/foundation.topbar.js') }}"></script>
 		<script>
 		  $(document).foundation();
 		</script>
-		<script src="{{ url_for('views.static', filename='js/app.js') }}"></script>
+		<script src="{{ url_for('core.static', filename='js/app.js') }}"></script>
 	</body>
 </html>
