--- a/ogreserver/templates/macros.html
+++ b/ogreserver/templates/macros.html
@@ -1,5 +1,5 @@
 {% macro search(s='') -%}
-<form action="{{ url_for('views.list') }}" method="get">
+<form action="{{ url_for('ebooks.listing') }}" method="get">
 	<dl>
 		<dd><input type="text" name="s" value="{{ s }}" /></dd>
 		<dd><input type="submit" value="Search" class="button radius" /></dd>
