server: full ebook detail page

--- a/ogreserver/templates/list.html
+++ b/ogreserver/templates/list.html
@@ -8,7 +8,7 @@
 <li class="ebook">
 	<div class="panel radius">
 		<div class="firstsection">
-			<a class="title" href="/download/{{b.ebook_id}}">{{b.author}} - {{b.title}}</a>
+			<a class="title" href="/view/{{b.ebook_id}}">{{b.author}} - {{b.title}}</a>
 			<span class="info">
 				<span class="rating hidden">{{b.rating}}</span>
 				<span class="comments hidden">{{b.num_comments}}</span>
