--- a/ogreserver/static/sass/app.scss
+++ b/ogreserver/static/sass/app.scss
@@ -56,13 +56,18 @@ table { border: 0; }
 	background: #111111;
 }
 
-h2#username {
+h2.detail_page {
 	width: 70%;
 	border-bottom: solid 1px #dddddd;
 }
 
-.row .user-info {
-	margin-top: 20px;
+.row {
+	.info {
+		margin-top: 20px;
+	}
+	.book-info {
+		p { margin-bottom: 0 }
+	}
 }
 
 .body {
