--- a/ogreserver/templates/profile.html
+++ b/ogreserver/templates/profile.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
 
-<h2 id='username'>{{ user.username }}</h2>
+<h2 class='detail_page'>{{ user.username }}</h2>
 
 <div class="large-9 columns">
 
@@ -11,7 +11,7 @@
 		{% endif %}
 	</div>
 
-	<div class="row user-info">
+	<div class="row info">
 		<p>
 		<strong>Email Address</strong>: {{ user.email }}
 		</p>
