server: stats and badges for dedrm

--- a/ogreserver/templates/profile.html
+++ b/ogreserver/templates/profile.html
@@ -35,7 +35,7 @@
 		<tr>
 		</tr>
 			<th>Number of DRM cleaned ebooks</th>
-			<td></td>
+			<td>{{ stats.total_dedrm }}</td>
 		</tr>
 		</table>
 		</fieldset>
