server: removed bullshit rating/comments ajax

--- a/ogreserver/templates/list.html
+++ b/ogreserver/templates/list.html
@@ -10,8 +10,7 @@
 		<div class="firstsection">
 			<a class="title" href="/view/{{b.ebook_id}}">{{b.author}} - {{b.title}}</a>
 			<span class="info">
-				<span class="rating hidden">{{b.rating}}</span>
-				<span class="comments hidden">{{b.num_comments}}</span>
+				<span class="rating">{{b.rating}}</span>
 			</span>
 		</div>
 		<div class="secondsection">
