--- a/ogreserver/templates/layout.html
+++ b/ogreserver/templates/layout.html
@@ -48,7 +48,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<form action="{{ url_for('ebooks.listing') }}" method="get">
+				<form action="{{ url_for('ebooks.listing') }}" method="post">
 					<div class="large-10 columns">
 						<input type="text" name="s" value="{{ s }}" />
 					</div>
