--- a/ogreserver/templates/layout.html
+++ b/ogreserver/templates/layout.html
@@ -100,6 +100,7 @@
 		<script src="{{ url_for('core.static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
 		<script src="{{ url_for('core.static', filename='bower_components/foundation/js/foundation.min.js') }}"></script>
 		<script src="{{ url_for('core.static', filename='bower_components/foundation/js/foundation/foundation.topbar.js') }}"></script>
+		<script src="{{ url_for('core.static', filename='bower_components/jquery-infinite-scroll-helper/jquery.infinite-scroll-helper.js') }}"></script>
 		<script>
 		  $(document).foundation();
 		</script>
