templates: disable edit link on ebook detail page

--- a/ogreserver/templates/view.html
+++ b/ogreserver/templates/view.html
@@ -6,7 +6,7 @@
 <div class="large-9 columns">
 
 	<div class="row">
-		<a href="{{ url_for('ebooks.edit', ebook_id=ebook.ebook_id) }}">edit ebook metadata</a>
+		{# <a href="{{ url_for('ebooks.edit', ebook_id=ebook.ebook_id) }}">edit ebook metadata</a> #}
 	</div>
 
 	<div class="row info book-info">
