ui: buttons are always rounded

--- a/ogreserver/templates/layout.html
+++ b/ogreserver/templates/layout.html
@@ -53,7 +53,7 @@
 						<input type="text" name="s" value="{{ s }}" />
 					</div>
 					<div class="large-2 columns">
-						<input type="submit" value="Search" class="search button radius small" />
+						<input type="submit" value="Search" class="search button small" />
 					</div>
 				</form>
 			</div>
