--- a/ogreserver/templates/profile_edit.html
+++ b/ogreserver/templates/profile_edit.html
@@ -23,8 +23,8 @@
 				{% endfor %}
 
 				<dd>
-					<input type="submit" value="Save" class="button radius primary-dark" />
-					<a href="/profile" class="button radius secondary">Cancel</a>
+					<input type="submit" value="Save" class="button primary-dark" />
+					<a href="/profile" class="button secondary">Cancel</a>
 				</dd>
 			</dl>
 		</form>
