--- a/ogreserver/static/sass/app.scss
+++ b/ogreserver/static/sass/app.scss
@@ -74,6 +74,10 @@ h2.detail_page {
 	padding-top: 20px;
 }
 
+input.button {
+	border-radius: 3px;
+}
+
 /* -----------------------------------------
    Listing
 ----------------------------------------- */
