--- a/ogreserver/templates/macros.html
+++ b/ogreserver/templates/macros.html
@@ -2,7 +2,7 @@
 <form action="{{ url_for('ebooks.listing') }}" method="post">
 	<dl>
 		<dd><input type="text" name="s" value="{{ s }}" /></dd>
-		<dd><input type="submit" value="Search" class="button radius" /></dd>
+		<dd><input type="submit" value="Search" class="button" /></dd>
 	</dl>
 </form>
 {%- endmacro %}
