--- a/ogreserver/templates/security/change_password.html
+++ b/ogreserver/templates/security/change_password.html
@@ -10,7 +10,7 @@
   {{ render_field_with_errors(change_password_form.password) }}
   {{ render_field_with_errors(change_password_form.new_password) }}
   {{ render_field_with_errors(change_password_form.new_password_confirm) }}
-  {{ render_field(change_password_form.submit, class="button small radius primary-dark") }}
+  {{ render_field(change_password_form.submit, class="button small primary-dark") }}
 </form>
 
 {% endblock %}
