--- a/ogreserver/templates/security/forgot_password.html
+++ b/ogreserver/templates/security/forgot_password.html
@@ -8,7 +8,7 @@
 <form action="{{ url_for_security('forgot_password') }}" method="POST" name="forgot_password_form">
 	{{ forgot_password_form.hidden_tag() }}
 	{{ render_field_with_errors(forgot_password_form.email) }}
-	{{ render_field(forgot_password_form.submit, class="button small radius primary-dark") }}
+	{{ render_field(forgot_password_form.submit, class="button small primary-dark") }}
 </form>
 
 {% endblock %}
