--- a/ogreserver/templates/security/login_user.html
+++ b/ogreserver/templates/security/login_user.html
@@ -10,7 +10,7 @@
 	{{ render_field_with_errors(login_user_form.password) }}
 	{{ render_field_with_errors(login_user_form.remember) }}
 	{{ render_field(login_user_form.next) }}
-	{{ render_field(login_user_form.submit, class="button small radius primary-dark") }}
+	{{ render_field(login_user_form.submit, class="button small primary-dark") }}
 </form>
 <p><a href="{{ url_for_security('forgot_password') }}">Forgot password</a></p>
 
