--- a/ogreserver/templates/security/reset_password.html
+++ b/ogreserver/templates/security/reset_password.html
@@ -9,7 +9,7 @@
   {{ reset_password_form.hidden_tag() }}
   {{ render_field_with_errors(reset_password_form.password) }}
   {{ render_field_with_errors(reset_password_form.password_confirm) }}
-  {{ render_field(reset_password_form.submit, class="button small radius primary-dark") }}
+  {{ render_field(reset_password_form.submit, class="button small primary-dark") }}
 </form>
 
 {% endblock %}
