server: Amazon API, Goodreads API metadata extraction

--- a/ogreserver/config/pillar/dev_vars.tmpl
+++ b/ogreserver/config/pillar/dev_vars.tmpl
@@ -43,6 +43,7 @@ aws_advertising_api_secret_key: ""
 aws_advertising_api_associate_tag: ""
 
 mailgun_api_key: ""
+goodreads_api_key: ""
 
 # default OGRE user
 ogre_user_name: {{ defaults.ogre_user_name }}
