server: renamed ebook detail view & template

--- a/ogreserver/templates/list.html
+++ b/ogreserver/templates/list.html
@@ -10,7 +10,7 @@
 <li class="ebook">
 	<div class="panel radius">
 		<div class="firstsection">
-			<a class="title" href="/view/{{b.ebook_id}}">{{b.author}} - {{b.title}}</a>
+			<a class="title" href="/ebook/{{b.ebook_id}}">{{b.author}} - {{b.title}}</a>
 			<span class="info">
 				<span class="rating">{{b.rating}}</span>
 			</span>
