server: display provider on ebook detail page

--- a/ogreserver/templates/ebook_detail.html
+++ b/ogreserver/templates/ebook_detail.html
@@ -15,6 +15,7 @@
 		<p><strong>Genre</strong>: TODO</p>
 		<p><strong>Publisher</strong>: {{ ebook.publisher }}</p>
 		<p><strong>Date</strong>: {{ ebook.publish_date }}</p>
+		<p><strong>Origin</strong>: {{ ebook.meta['source']['provider'] }}</p>
 
 		{% for key, value in ebook.meta.iteritems() %}
 			{% if value %}
