server: advanced flag on user profile

--- a/ogreserver/templates/profile_edit.html
+++ b/ogreserver/templates/profile_edit.html
@@ -9,25 +9,26 @@
 
 	<div class="row">
 		<fieldset>
-		<legend>Edit</legend>
+			<legend>Edit</legend>
 
-		<form action="{{ url_for('user.profile_edit', user_id=user.id) }}" method="post">
-			{{ form.csrf_token }}
+			<form action="{{ url_for('user.profile_edit', user_id=user.id) }}" method="post">
+				{{ form.csrf_token }}
 
-			<dl>
-				{% for field in form %}
-				{% if field.name != 'csrf_token' %}
-				<dt>{{ field.label }}</dt>
-				<dd>{{ field() }}</dd>
-				{% endif %}
-				{% endfor %}
+				<dl>
+					{% for field in form %}
+					{% if field.name != 'csrf_token' %}
+					<dt>{{ field.label }}</dt>
+					<dd>{{ field() }}</dd>
+					{% endif %}
+					{% endfor %}
 
-				<dd>
-					<input type="submit" value="Save" class="button primary-dark" />
-					<a href="/profile" class="button secondary">Cancel</a>
-				</dd>
-			</dl>
-		</form>
+					<dd>
+						<input type="submit" value="Save" class="button primary-dark" />
+						<a href="/profile" class="button secondary">Cancel</a>
+					</dd>
+				</dl>
+			</form>
+		</fieldset>
 	</div>
 
 </div>
