--- a/ogreserver/templates/layout.html
+++ b/ogreserver/templates/layout.html
@@ -59,7 +59,7 @@
 			</div>
 		</header>
 
-		<div class="row body">
+		<section class="row body">
 			<div class="large-12 columns">
 				<div id="messages">
 					{% for message in get_flashed_messages() %}
@@ -69,7 +69,7 @@
 
 				{% block body %}{% endblock %}
 			</div>
-		</div>
+		</section>
 
 		<footer class="row full-width">
 			<div class="large-4 columns">
