--- a/ogreserver/static/sass/_buttons.scss
+++ b/ogreserver/static/sass/_buttons.scss
@@ -74,6 +74,6 @@ input[type="submit"]{
    @include button-effect($wet-asphalt);
   }
   &.inverse-dark{
-   @include button-effect($blue-darkest);
+   @include button-effect($blue-dark);
   }
 }
