--- a/ogreserver/templates/search.html
+++ b/ogreserver/templates/search.html
@@ -2,5 +2,5 @@
 {% block body %}
 	<h2>Search</h2>
 	{% import "macros.html" as macros %}
-	{{ macros.search() }}
+	{{ macros.search(terms) }}
 {% endblock %}
